static/css/stylesheet.css
  * {
    box-sizing: border-box;
  }
  
  body {
    font-size: 1.50rem;
  }

  html, body, div {
    padding:0;
    margin:0;
  }

  /* Positions each list item */
  li {
    margin: 0;
    padding-left: 20px;
    text-align: left;
    list-style-position: inside;
    transition: 0.5;
  }

  ul {
    list-style-type: square;
  }

  /* This adds box around new list item */
  ul li {
    position: relative;
    background: rgb(55, 105, 211);
    font-size: 18px;
    padding: 5px;
    padding-bottom: 5px;
    margin-left: 70px;
    width: 80%;
    transition: 0.5s;
  }
  
  ul li:hover {
    background: rgb(168, 185, 230);
  }

  .time {
    position: absolute;
    right: 0;
    padding-top: 5px;
    padding-right: 10px;
    top: 0;
  }
  
  .header {
    text-align: center;
    width: 100%;
    padding: 30px;
    background: #1abc9c;
    color: white;
    font-size: 30px;
    position: relative;
  }
  
  section {
    color: #fff;
    text-align: center;
  }
  
  
  /* The <article> tag specifies independent, self-contained content. */
  article {
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px;
    width: 100%;
  }

  .items {
    flex: 1;
  }


  h1 {
    font-size: 1.50rem;
  }

  /* Wrap everything under the header in a container */
  .container {
    display: grid;
    width: 100%;
    height: 100%;
  }
  
  /* Define section for the clock portion */
  .left {
    background-color: #d43d17b9;
    position: absolute;
    left: 0px;
    width: 50%;
    height: 50%;
  }
  
  /* Define section for the todo list portion */
  .right {
    background-color: #3d25aa;
    position: absolute;
    right: 0px;
    width: 50%;
    height: inherit;
    flex-direction: row;
  }

  /* Define class for all buttons */
  .button {
    text-align: center;
    font-size: 16px;
    color: rgb(15, 15, 15);
    padding: 10px;
    width: 25%;
    background: #FFF;
    transition: 0.5s;
  }

  .button:hover {
    background-color: rgb(71, 177, 118);
  }

  /* Design the input field */
  input {
    margin: 0;
    border: none;
    width: 50%;
    padding: 10px;
    font-size: 16px;
    transition: 0.5s;
  }

  #countdown {
      position: relative;
      display: inline-block;
      font-size: 50px;
      width: 50%;
      padding: 10px;
      justify-content: center;
      align-items: center;
      color: white;
      margin: 0;
  }


  

